--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ no-log-ix-name = []
 cpi = [ "no-entrypoint" ]
 default = []
 idl-build = [ "anchor-lang/idl-build","anchor-spl/idl-build" ]
+anchor-debug = [] 
+custom-heap = [] 
+custom-panic = []
+
 
 [dependencies]
 anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
